# xfolder

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  tests-description.md
.config-test/: cache.db
.github/workflows/: publish.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: analytics.py  cache.py  config.py  converters.py  domain.py  fingerprint_store.py  logstream.py  main.py  metrics.py  models.py  progress.py  scanner.py  store.py  system.py
backend/scripts/: run_benchmark.py
backend/tests/: test_api_endpoints.py  test_group_contents.py  test_group_diff.py  test_progress_phases.py  test_similarity_groups.py  test_visualizations.py  utils.py
deploy/: .env.example  docker-compose.yml
docs/: benchmark.md  install.md  prd.md  summary.md  test.md
docs/benchmark-history/: 283af8ddae2a_20251117T2100510690810000.json  36d46be9de17_20251117T1915346661310000.json  6313c4fa66c1_20251117T1946352354850000.json  844e00f64f26_20251117T1906271302380000.json  d9e92a655558_20251117T2114492429440000.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  format.ts  styles.css
frontend/src/components/: ComparisonPanel.tsx  DensityTreemap.tsx  DiagnosticsDrawer.tsx  DiffModal.tsx  GroupTable.tsx  MetricCard.tsx  ScanForm.tsx  SimilarityMatrix.tsx  TreeView.tsx  WarningsPanel.tsx
test_mockup/progress_shapes/group_heavy_cluster/: README.txt
test_mockup/progress_shapes/walk_heavy_shallow/: README.txt  file_000.txt  file_001.txt  file_002.txt  file_003.txt  (+46 more)
(+5 files in other folders)
